--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "NODE_ENV=development tsx server/index.ts",
-    "build": "tsc",
-    "start": "node dist/index.js",
+    "build": "tsc && cd client && npm run build",
+    "start": "NODE_ENV=production node dist/server/index.js",
     "postinstall": "prisma generate"
   },
   "dependencies": {
