Update Render configuration to enforce Node.js runtime

--- a/render.yaml
+++ b/render.yaml
@@ -1,11 +1,13 @@
 services:
   - type: web
     name: trackmaster-api
+    runtime: node
     env: node
     region: ohio
     plan: free
     buildCommand: npm install && npm run build
     startCommand: npm start
+    nodeVersion: 18.x
     envVars:
       - key: NODE_ENV
         value: production
