--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "Task management application",
   "main": "dist/server/index.js",
+  "engines": {
+    "node": ">=18.x"
+  },
   "scripts": {
     "dev": "NODE_ENV=development tsx server/index.ts",
     "build": "tsc && cd client && npm install && npm run build",
