--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,9 @@
 services:
   - type: web
     name: trackmaster-api
-    runtime: node
-    buildCommand: npm install && npm run build
-    startCommand: npm start
-    nodeVersion: 20.x
+    env: node
+    buildCommand: ./build.sh
+    startCommand: ./start.sh
     envVars:
       - key: NODE_ENV
         value: production
