--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "NODE_ENV=development tsx server/index.ts",
     "build": "tsc && cd client && npm install && npm run build",
     "start": "NODE_ENV=production node dist/server/index.js",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate && tsc"
   },
   "dependencies": {
     "@prisma/client": "^5.10.0",
