--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "1.0.0",
   "description": "Task management application",
   "main": "dist/server/index.js",
+  "type": "module",
   "engines": {
     "node": ">=20.x"
   },
   "scripts": {
     "dev": "NODE_ENV=development tsx server/index.ts",
-    "build": "tsc && cd client && npm install && npm run build",
+    "build": "tsc -p tsconfig.build.json && cd client && npm install && npm run build",
     "start": "NODE_ENV=production node dist/server/index.js",
-    "postinstall": "prisma generate && tsc"
+    "postinstall": "prisma generate && tsc -p tsconfig.build.json"
   },
   "dependencies": {
     "@prisma/client": "^5.10.0",
@@ -26,8 +27,13 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.11.19",
+    "@vitejs/plugin-react": "^4.5.0",
+    "drizzle-orm": "^0.43.1",
+    "drizzle-zod": "^0.8.2",
     "prisma": "^5.10.0",
     "tsx": "^4.7.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vite": "^6.3.5",
+    "zod": "^3.25.28"
   }
 }
