--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   },
   "scripts": {
     "dev": "NODE_ENV=development tsx server/index.ts",
-    "build": "tsc -p tsconfig.build.json && cd client && npm install && npm run build",
+    "build": "npm install && prisma generate && tsc -p tsconfig.build.json && cd client && npm install && npm run build",
     "start": "NODE_ENV=production node dist/server/index.js",
-    "postinstall": "prisma generate && tsc -p tsconfig.build.json"
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@prisma/client": "^5.10.0",
@@ -20,13 +20,13 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "resend": "^3.2.0"
+    "resend": "^3.2.0",
+    "@types/bcrypt": "^5.0.2",
+    "@types/express": "^4.17.22",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/node": "^20.17.50"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^9.0.5",
-    "@types/node": "^20.11.19",
     "@vitejs/plugin-react": "^4.5.0",
     "drizzle-orm": "^0.43.1",
     "drizzle-zod": "^0.8.2",
