--- a/package.json
+++ b/package.json
@@ -24,15 +24,15 @@
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.22",
     "@types/jsonwebtoken": "^9.0.9",
-    "@types/node": "^20.17.50"
+    "@types/node": "^20.17.50",
+    "typescript": "^5.3.3",
+    "prisma": "^5.10.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.5.0",
     "drizzle-orm": "^0.43.1",
     "drizzle-zod": "^0.8.2",
-    "prisma": "^5.10.0",
     "tsx": "^4.7.1",
-    "typescript": "^5.3.3",
     "vite": "^6.3.5",
     "zod": "^3.25.28"
   }
