--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -3,8 +3,8 @@
   "compilerOptions": {
     "noEmit": false,
     "allowImportingTsExtensions": false,
-    "module": "CommonJS",
-    "moduleResolution": "node",
+    "module": "ESNext",
+    "moduleResolution": "bundler",
     "target": "ES2020",
     "outDir": "dist",
     "rootDir": ".",
