Refine tsconfig.build.json for Render deployment

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -3,8 +3,8 @@
   "compilerOptions": {
     "noEmit": false,
     "allowImportingTsExtensions": false,
-    "module": "ESNext",
-    "moduleResolution": "bundler",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
     "target": "ES2020",
     "outDir": "dist",
     "rootDir": ".",
