--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "dev": "NODE_ENV=development tsx server/index.ts",
-    "build": "npm install && prisma generate && tsc -p tsconfig.build.json && cd client && npm install && npm run build",
+    "build": "prisma generate && tsc -p tsconfig.build.json && cd client && npm install && npm run build",
     "start": "NODE_ENV=production node dist/server/index.js",
     "postinstall": "prisma generate"
   },
