--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     env: node
     region: ohio
     plan: free
-    buildCommand: npm install && prisma generate && tsc -p tsconfig.build.json && cd client && npm install && npm run build
+    buildCommand: npm run build
     startCommand: node dist/server/index.js
     envVars:
       - key: NODE_VERSION
