--- a/package.json
+++ b/package.json
@@ -14,24 +14,27 @@
   },
   "dependencies": {
     "@prisma/client": "^5.10.0",
-    "bcrypt": "^5.1.1",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.2",
-    "resend": "^3.2.0",
+    "@radix-ui/react-accordion": "^1.2.11",
+    "@radix-ui/react-aspect-ratio": "^1.1.7",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.22",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20.17.50",
-    "typescript": "^5.3.3",
-    "prisma": "^5.10.0",
+    "@vitejs/plugin-react": "^4.5.0",
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
+    "dotenv": "^16.4.5",
     "drizzle-orm": "^0.43.1",
     "drizzle-zod": "^0.8.2",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "prisma": "^5.10.0",
+    "react-day-picker": "^9.7.0",
+    "resend": "^3.2.0",
+    "tsx": "^4.7.1",
+    "typescript": "^5.3.3",
     "vite": "^6.3.5",
-    "zod": "^3.25.28",
-    "@vitejs/plugin-react": "^4.5.0",
-    "tsx": "^4.7.1"
-  },
-  "devDependencies": {}
+    "zod": "^3.25.28"
+  }
 }
